--- a/index_ questionnaire.html
+++ b/index_ questionnaire.html
@@ -14,8 +14,10 @@
   </head>
 
   <body>
+    
     <h1>Опросник для обладателей котиков:</h1>
-
+    
+<form>
     <div>
       <label for="pet's_name">Кличка питомца</label>
       <input type="text" id="pet's_name" />
@@ -83,5 +85,6 @@
     </div>
 
     <div><button>Сохранить</button></div>
+    </form>
   </body>
 </html>
