--- a/index_ questionnaire.html
+++ b/index_ questionnaire.html
@@ -75,7 +75,7 @@
         </div>
       </fieldset>
 
-      <div><textarea rows="15">Комментарий владельца</textarea></div>
+      <div><textarea rows="15" cols="40">Комментарий владельца</textarea></div>
 
       <div>
         <span>Приложить фото питомца (можно выбрать файл с диска)</span
