--- a/index_ questionnaire.html
+++ b/index_ questionnaire.html
@@ -37,9 +37,9 @@
         <legend>Порода питомца:</legend>
         <div>
           <select>
-            <option>бенгальская кошка</option>
-            <option>сфинкс</option>
-            <option>
+            <option value="bengal cat">бенгальская кошка</option>
+            <option value="sphynx cat">сфинкс</option>
+            <option value="stray cat">
               милый комочек шерсти без родословной, подобранный на улице
             </option>
           </select>
@@ -86,3 +86,4 @@
     </form>
   </body>
 </html>
+
